--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://arkar-myo.github.io/portfolio-project/",
+	"homepage": "https://Arkar-myo.github.io/portfolio-project",
 	"name": "reactfolio",
 	"version": "1.1.0",
 	"description": "Personal portfolio template built using Reactjs",
